src/test/deca/context/valid/declClass-subTypeReturnType.deca
class A {
    int method(){
        int b = 3;
    }
}

class C extends A {
    int x;
}

class B {
    A returnMethod(int a){
        a = 3;
    }
}

class D extends B {
    C returnMethod(int a){
        a = 100;
    }
}



