src/test/deca/context/invalid/declClass-subClassInParametersOfMethods.deca
class A {
    float ar;
    int myMethod(A fr, float b){
        b = 3;
    }
}

class C extends A {
    int dragonBallZ;
}

class D {
}

class B extends A {
    int ar;
    boolean myMethod(C fr, float b){
        b = 10000;
    }
}
